--- a/css/style.css
+++ b/css/style.css
@@ -8431,6 +8431,14 @@ h1, h2, h3, h4, h5,
     position: relative;
     height: 750px;
     z-index: 0; }
+
+    @media (max-width:550px) {
+      .owl-carousel.home-slider {
+        position: relative;
+        height: 60vh;
+        z-index: 0; }
+    }
+
     .owl-carousel.home-slider .slider-item {
       background-size: cover;
       background-repeat: no-repeat;
