--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -152,3 +152,19 @@
         gap: 10px;
     }
 }
+
+#skills-section .big {
+    color: rgba(255, 255, 255, 0.08) !important;
+    font-size: 8rem !important;
+    position: absolute !important;
+    left: 0;
+    right: 0;
+    font-weight: 900;
+    z-index: -1;
+    text-transform: uppercase;
+}
+
+#skills-section .heading-section h2 {
+    position: relative;
+    z-index: 1;
+}
