--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -5,7 +5,7 @@
   z-index: 20000; /* higher than navbar */
 }
 .social-icons a {
-  color: black;   /* change to white if your header is dark */
+  color: rgb(255, 255, 255);   /* change to white if your header is dark */
   margin-left: 12px;
   font-size: 1.8rem;
 }
